Add CacheManager